--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ license = { text = "MIT" }
 requires-python = ">=3.8"
 
 dependencies = [
-    "pymupdf",  # For PDF generation
+    "reportlab",  # For PDF generation
 ]
 
 [tool.setuptools]
